<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_download_songs"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context="com.example.android.musicapp.DownloadSongs">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:id="@+id/description"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/downloadScreen"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="@android:color/white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/downloadScreenDescription"
            android:textColor="@android:color/white" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_below="@id/description"
        android:background="@color/colorPrimary"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="serif"
            android:text="@string/songTitle"
            android:textColor="@android:color/white"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/artist"
            android:textColor="@android:color/white" />
    </LinearLayout>

    <ImageView
        android:id="@+id/artistImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/footer"
        android:layout_below="@id/header"
        android:background="@android:color/white"
        android:layout_centerInParent="true"
        android:src="@drawable/artist" />

    <RelativeLayout
        android:id="@+id/footer"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_alignParentBottom="true"
        android:background="@color/background"
        android:orientation="horizontal"
        android:padding="8dp">

        <Button
            style="@style/buttonDownloadScreen"
            android:id="@+id/download"
            android:background="@drawable/download" />

        <Button
            style="@style/buttonDownloadScreen"
            android:id="@+id/playPause"
            android:layout_centerInParent="true"
            android:background="@drawable/play" />

    </RelativeLayout>
</RelativeLayout>
