<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_current_song"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.musicapp.currentSong">
    <LinearLayout
        android:id="@+id/decription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="@color/background"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/songScreen"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/songScreenDescription"
            android:textColor="@android:color/white" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_below="@id/decription"
        android:background="@color/colorPrimary"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="serif"
            android:text="@string/songTitle"
            android:textColor="@android:color/white"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/artist"
            android:textColor="@android:color/white" />
    </LinearLayout>

    <ImageView
        android:id="@+id/artistImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/footer"
        android:layout_below="@id/header"
        android:layout_centerInParent="true"
        android:src="@drawable/artist" />

    <LinearLayout
        android:id="@+id/footer"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_alignParentBottom="true"
        android:background="@color/background"
        android:orientation="horizontal"
        android:padding="8dp">
        <Button
            style="@style/buttons"
            android:id="@+id/shuffle"
            android:background="@drawable/shuffle" />
        <Button
            style="@style/buttons"
            android:id="@+id/shuffleOn"
            android:background="@drawable/shuffle"
            android:backgroundTint="@android:color/white"
            android:visibility="gone"/>
        <Button
            style="@style/buttons"
            android:id="@+id/previous"
            android:background="@drawable/previous"/>
        <Button
            style="@style/buttons"
            android:id="@+id/playPause"
            android:background="@drawable/pause" />
        <Button
            style="@style/buttons"
            android:id="@+id/next"
            android:background="@drawable/next"/>
        <Button
        style="@style/buttons"
        android:id="@+id/repeat"
        android:background="@drawable/repeat"/>
        <Button
            style="@style/buttons"
            android:id="@+id/repeatOn"
            android:backgroundTint="@android:color/white"
            android:visibility="gone"
            android:background="@drawable/repeat"/>
    </LinearLayout>
</RelativeLayout>
